# var

./: .gitignore  .jscpd.json  .tool-versions  ANNOUNCEMENT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  TODO.md  biome.json  cliff.toml  coverage.json  knip.json  languages.json  package.json  pnpm-lock.yaml  renovate.json5  tsconfig.tests.json  var.config.json  var.config.ts  vitest.plugins.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: changelog.yml  dotnet.yml  go.yml  java.yml  python.yml  ruby.yml  typescript.yml
conformance/config/: README.md  var.config.schema.json
doc/: ARCHITECTURE.md  CUCUMBER-SLOP.md  RELEASING.md
doc/adr/: 0003-java-junit-integration.md  0004-ruby-port.md  0005-ruby-test-framework-integration.md  0008-dotnet-port.md  0010-go-port.md  0011-go-test-integration.md
docs/adr/: 0001-second-language-python.md
docs/tutorial/: 01-hello-bdd.bdd.md  04-yahtzee.md  04-yahtzee.var.md  package.json  (+1 more)
dotnet/: Varar.sln
examples/: .tool-versions  README.md
go/: .gitignore  go.mod
java/: pom.xml
python/: README.md  pyproject.toml  var.config.json
release/: changelog.sh  lib.sh  lint-commits.sh  maven-settings.xml  release.env  release.sh  stamp.sh  stamp_python.py
ruby/: Gemfile
rust/: Cargo.toml
rust/varar-cargotest/: Cargo.toml
rust/varar-cargotest/src/: lib.rs
scripts/: coverage-summary.sh  fresh-venv.sh  gocover-to-lcov.sh  install-vscode.mjs
typescript/: .jscpd.json  knip.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.tests.json  var.config.ts  vitest.config.ts
(+438 files in other folders)
