[package]
name = "varar-cargotest"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
varar-core = { path = "../varar-core" }
varar-config = { path = "../varar-config" }
varar-runner = { path = "../varar-runner" }
libtest-mimic = "0.8"

[lib]
name = "varar_cargotest"
path = "src/lib.rs"
